Just before implenting User Online List

--- a/IdentityWithRedis/IdentityWithRedis.csproj
+++ b/IdentityWithRedis/IdentityWithRedis.csproj
@@ -221,6 +221,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\Chat.cs" />
+    <Compile Include="Hubs\NotificationHub.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ConstantData.cs" />
     <Compile Include="Models\IdentityModels.cs" />
