--- a/IdentityWithRedis/IdentityWithRedis.csproj
+++ b/IdentityWithRedis/IdentityWithRedis.csproj
@@ -221,6 +221,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\Chat.cs" />
+    <Compile Include="Hubs\OnlineUsers.cs" />
     <Compile Include="Hubs\NotificationHub.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ConstantData.cs" />
@@ -293,6 +294,7 @@
     <Content Include="Views\Account\RegisterUser.cshtml" />
     <Content Include="Views\Home\Chat.cshtml" />
     <Content Include="Views\Home\RedisTest.cshtml" />
+    <Content Include="Views\Home\LiveConnectionTest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
